html skeleton made

--- a/index.html
+++ b/index.html
@@ -8,6 +8,74 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="" alt="header logo">
+        <ul>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li> 
+            <li><a href="">header link three</a></li>
+        </ul>
+    </div>
+    <div class="intro">
+        <div>
+            This website is awesome
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus perspiciatis aliquam nostrum repudiandae adipisci sit deserunt rem, quisquam, eos autem quod error cum ullam ut facilis delectus corporis quam aspernatur obcaecati. Quidem reiciendis distinctio debitis ipsam totam laborum culpa reprehenderit doloribus excepturi, beatae, dolorum, facilis non officia voluptatum aliquam.
+        </div>
+        <button>Sign up</button>
+        <img src="" alt="cover photo">
+    </div>
+    <div class="collage">
+        <div>
+            <img src="" alt="photo1">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+            </div>
+        </div>
+        <div>
+            <img src="" alt="photo2">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+            </div>
+        </div>
+        <div>
+            <img src="" alt="photo3">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+            </div>
+        </div>
+        <div>
+            <img src="" alt="photo4">
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+            </div>
+        </div>
+    </div>
+    <div class="inspo">
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque expedita tempora, nihil eos et, tenetur qui adipisci excepturi commodi autem sed. Est nihil quibusdam fuga, exercitationem delectus quidem inventore aliquam!
+            <div>
+                -Mr.insporational
+            </div>
+        </div>
+    </div>
+    <div class="ad">
+        <div>
+            Call to action! It's time!
+        </div>
+        <div>
+            Sign up for our product by clicking that button over there! 
+        </div>
+        <button>
+            Sign up
+        </button>
+    </div>
+    <div class="footer">
+        <img src="" alt="copyright logo">
+        <div>
+            The Odin Project 2022
+        </div>
+    </div>
 </body>
 </html>
