Intro and header complete

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
         </ul>
     </div>
     <div class="intro">
-        <div>
-            This website is awesome
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus perspiciatis aliquam nostrum repudiandae adipisci sit deserunt rem, quisquam, eos autem quod error cum ullam ut facilis delectus corporis quam aspernatur obcaecati. Quidem reiciendis distinctio debitis ipsam totam laborum culpa reprehenderit doloribus excepturi, beatae, dolorum, facilis non officia voluptatum aliquam.
-        </div>
-        <button>Sign up</button>
-        <img src="" alt="cover photo">
+        <div class ='text'>
+            <div id="herotext">
+                The best shopping experience
+            </div>
+            <div>
+               Vestus is focused on the enviroment and wants to give every shirt, sweater, pants, jackets and accessories a new life.
+            </div>
+            <button>Sign up</button>
+        </div>    
+        <img src="./images/minimallist.jpg" alt="cover photo" height="200" width="200">
     </div>
     <div class="collage">
         <div>
