style tab completed

--- a/index.html
+++ b/index.html
@@ -28,29 +28,34 @@
         </div>    
         <img src="./images/minimallist.jpg" alt="cover photo" height="200" width="200">
     </div>
-    <div class="collage">
-        <div>
-            <img src="" alt="photo1">
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
-            </div>
+    <div class="middle">
+        <div id="styletext">
+            Shop different styles 
         </div>
-        <div>
-            <img src="" alt="photo2">
+        <div class="collage">
             <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+                <img src="./images/trending.jpg" alt="photo1" height="250" width="175">
+                <div class="shoppingtext">
+                    Trending
+                </div>
             </div>
-        </div>
-        <div>
-            <img src="" alt="photo3">
             <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+                <img src="./images/trending3.jpg" alt="photo2" height="250" width="175">
+                <div class="shoppingtext">
+                    Bold
+                </div>
             </div>
-        </div>
-        <div>
-            <img src="" alt="photo4">
             <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempora minus reprehenderit tenetur fuga, delectus quos qui totam modi, dicta, assumenda molestias neque exercitationem deserunt ipsam temporibus inventore vero natus.
+                <img src="./images/trending4.jpg" alt="photo3" height="250" width="175">
+                <div class="shoppingtext">
+                    High-end 
+                </div>
+            </div>
+            <div>
+                <img src="./images/trending5.jpg" alt="photo4" height="250" width="175">
+                <div class="shoppingtext">
+                    Minimal
+                </div>
             </div>
         </div>
     </div>
