--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="header">
         <img src="" alt="header logo">
         <ul>
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li> 
-            <li><a href="">header link three</a></li>
+            <li><a href="">Choose your style</a></li>
+            <li><a href="">Wishlist</a></li> 
+            <li><a href="">Shopping bag (1)</a></li>
         </ul>
     </div>
     <div class="intro">
@@ -60,11 +60,11 @@
         </div>
     </div>
     <div class="inspo">
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque expedita tempora, nihil eos et, tenetur qui adipisci excepturi commodi autem sed. Est nihil quibusdam fuga, exercitationem delectus quidem inventore aliquam!
-            <div>
-                -Mr.insporational
-            </div>
+        <div id="inspotext">
+            As a customer of Vestus I love how the give used clothes new life. Their bidding feature is a godsend and it helps me a lot when hunting for deals. The customer support is absolutely amazing and I always receive the help that I need. 
+        </div>
+        <div id="author">
+            -Amanda Johnson
         </div>
     </div>
     <div class="ad">
