email list sign up ad completed

--- a/index.html
+++ b/index.html
@@ -61,27 +61,30 @@
     </div>
     <div class="inspo">
         <div id="inspotext">
-            As a customer of Vestus I love how the give used clothes new life. Their bidding feature is a godsend and it helps me a lot when hunting for deals. The customer support is absolutely amazing and I always receive the help that I need. 
+            As a customer of Vestus I love how the give used clothes new life. Their bidding feature is a godsend and it helps me a lot when hunting for deals.
         </div>
         <div id="author">
             -Amanda Johnson
         </div>
     </div>
     <div class="ad">
-        <div>
-            Call to action! It's time!
+        <div class="thead">
+            <div class="theadtext">
+                <div id="actiontext">
+                    Want to get the latest deals!
+                </div>
+                <div id="smallertext">
+                    Sign up for our email list by clicking that button over there! 
+                </div>
+            </div>
+            <button>
+                    Sign up
+            </button>
         </div>
-        <div>
-            Sign up for our product by clicking that button over there! 
-        </div>
-        <button>
-            Sign up
-        </button>
     </div>
     <div class="footer">
-        <img src="" alt="copyright logo">
         <div>
-            The Odin Project 2022
+            Copyright &copy The Odin Project 2022
         </div>
     </div>
 </body>
