footer finished, landing page complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="" alt="header logo">
+        <img src="" alt="Vestus">
         <ul>
             <li><a href="">Choose your style</a></li>
             <li><a href="">Wishlist</a></li> 
